# langchain-ai-scientist-v2

./: .env.sample  README.md  pyproject.toml
config/: best-first-tree-search.yaml
src/ai_scientist_v2/: __init__.py  config.py  exceptions.py
src/ai_scientist_v2/cli/: __init__.py  idea_generation.py
src/ai_scientist_v2/models/: __init__.py  idea.py
src/ai_scientist_v2/pipelines/: __init__.py
src/ai_scientist_v2/pipelines/idea_generation/: __init__.py  nodes.py  pipeline.py  utils.py
src/ai_scientist_v2/pipelines/tree_based_experimentation/: __init__.py  models.py  pipeline.py
src/ai_scientist_v2/pipelines/tree_based_experimentation/nodes/: __init__.py  ablation.py  hyperparameter_tuning.py  improve_idea.py
src/ai_scientist_v2/pipelines/tree_based_experimentation/nodes/preliminary_investigation/: __init__.py  analyze_plots_with_vlm.py  analyze_plots_with_vlm_node.py  (+12 more)
src/ai_scientist_v2/utils/: configuration.py  stream.py
test_fixtures/: i-cant-believe-its-not-better.jsonl  i_cant_believe_its_not_better.py
test_fixtures/pipelines/tree_based_experimentation/nodes/preliminary_investigation/: output_define_global_metrics_node.json
tests/: bfts_config_test.py  config_test.py  conftest.py
tests/fixtures/: test_bfts_config.yaml
tests/pipelines/: idea_generation_test.py  tree_based_experimentation_test.py
tests/pipelines/idea_generation/: pipeline_test.py
tests/pipelines/tree_based_experimentation/: pipeline_test.py
tests/pipelines/tree_based_experimentation/nodes/preliminary_investigation/: create_draft_test.py  define_global_metrics_test.py
